logs/offboard_pkg/build.make.470.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle_Time()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:353:66: error: cannot bind non-const lvalue reference of type ‘MultiBody::mission_type&’ to an rvalue of type ‘MultiBody::mission_type’
  353 |         gps_mission_init(yaw_d, q_init, lla_lead0, mission_type::circle);
      |                                                    ~~~~~~~~~~~~~~^~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:170:126: note:   initializing argument 4 of ‘bool MultiBody::gps_mission_init(double&, geometry_msgs::Quaternion&, Eigen::Vector3d&, MultiBody::mission_type&)’
  170 | bool MultiBody::gps_mission_init(double &yaw_d, geometry_msgs::Quaternion &q_init, Eigen::Vector3d &lla_lead0, mission_type &type)
      |                                                                                                                ~~~~~~~~~~~~~~^~~~
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
